--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -68,6 +68,10 @@
   border: 1px solid #ccc;
 }
 
+.no-border {
+  border: none;
+}
+
 .br-5 {
   border-radius: 5px;
 }
